--- a/test5/css/test5.css
+++ b/test5/css/test5.css
@@ -83,10 +83,12 @@ main{
     width: 100%;
     border-bottom: 1px solid#adadad;
     line-height: 4rem;
+    padding: 0 2rem;
+    box-sizing: border-box;
 }
 .user-form-title span{
     background: url("../img/lantiao.png")no-repeat;
-    padding-left: 2rem;
+    padding-left: 1rem;
 }
 .user-form-list{
     padding: 0 1rem;
@@ -104,10 +106,10 @@ main{
     overflow: auto;
 }
 .user-form-label{
-    padding-left: 1.3rem;
-    padding-right: 0.9rem;
+    padding-left: 1.4rem;
+    padding-right: 1rem;
     float: left;
-    background: url("../img/hongxing.png") no-repeat;
+    background: url("../img/hongx.png") no-repeat;
     background-size: 1.2rem;
 }
 .user-form-list li span{
