任务六修改

--- a/test6/css/test6.css
+++ b/test6/css/test6.css
@@ -71,6 +71,7 @@ header a{
     z-index:1;
     display: flex;
     line-height: 4rem;
+    border-bottom:.1rem solid #aaaaaa ;
 }
 .dropdown{
     flex: auto;
@@ -83,10 +84,17 @@ header a{
     position: relative;
     width: 100%;
     line-height: 3rem;
+    border-right:.1rem solid #aaaaaa ;
 }
 .dropdown-menu{
     width: 100%;
     text-align: center;
+}
+.caret{
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
 }
 main{
     overflow: auto;
@@ -103,6 +111,7 @@ main li{
     padding: 0.8rem;
     list-style:none;
     height:8rem;
+    border-bottom:.1rem solid #aaaaaa ;
 }
 main p{
     position: relative;
@@ -124,21 +133,21 @@ main span{
     top: 50%;
     right: 0;
     transform: translateY(-50%);
-    margin-right: 2rem;
+    padding-right: 2rem;
+    margin-right: 1rem;
     color: #ff0000;
     line-height: 2.5rem;
 }
-main p a{
+span a {
     position: absolute;
     top: 50%;
     right: 0;
-    transform: translateY(-50%);
-    background: url("../img/allbgs.png") no-repeat;
-    background-position:0 -55px;
+    transform: translateY(-50%) rotate(50deg);
     display: inline-block;
-    width: 1.5rem;
-    height: 2.5rem;
-    line-height: 2.5rem;
+    width: 1.6rem;
+    height: 1.6rem;
+    border-right: 0.2rem solid #5fc0cd;
+    border-top: 0.2rem solid #5fc0cd;
 }
 .diz{
     background: url("../img/allbgs.png") no-repeat;
@@ -195,4 +204,9 @@ footer a{
     line-height:8.5rem;
     color: #aaa;
     font-size: 1.5rem;
+}
+@media screen and (max-width: 300px) {
+    main p {
+        margin-right:8rem ;
+    }
 }
