--- a/test6/css/test6.css
+++ b/test6/css/test6.css
@@ -52,14 +52,14 @@ header{
     color: #5fc0cd;
 }
 header a{
-    background: url("../img/allbgs.png") no-repeat;
-    background-position:0 -169px;
+    background: url("../img/ditu.png") no-repeat;
+    background-size: 3rem 3rem;
     position: absolute;
     top: 50%;
-    right: .1rem;
+    right: 1rem;
     transform: translateY(-50%);
-    width: 4.5rem;
-    height: 4rem;
+    width: 3rem;
+    height: 3rem;
 }
 .daohan{
     position: fixed;
@@ -101,7 +101,7 @@ main{
     flex: 1;
     padding: 0;
     margin-top: 9rem;
-    margin-bottom:8rem;
+    margin-bottom:7rem;
 }
 main ul{
     padding: 0;
@@ -110,23 +110,23 @@ main ul{
 main li{
     padding: 0.8rem;
     list-style:none;
-    height:8rem;
+    height:10rem;
     border-bottom:.1rem solid #aaaaaa ;
 }
 main p{
     position: relative;
     padding-left:2.5rem;
     margin: 0;
-    height: 2rem;
-    line-height: 2rem;
+    height: 3rem;
+    line-height:3rem;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis
 }
 .fwrq{
-    background: url("../img/allbgs.png") no-repeat;
+    background: url("../img/rili.png") no-repeat;
     color: #aaa;
-    background-position:0 -31px;
+    background-size: 2.4rem 2.4rem;
 }
 main span{
     position: absolute;
@@ -150,9 +150,9 @@ span a {
     border-top: 0.2rem solid #5fc0cd;
 }
 .diz{
-    background: url("../img/allbgs.png") no-repeat;
+    background: url("../img/dian.png") no-repeat;
     color: #aaa;
-    background-position:0 -8px;
+    background-size: 1.9rem 2.4rem;
 }
 footer {
     bottom: 0;
@@ -160,7 +160,7 @@ footer {
     left: 0;
     position: fixed;
     width: 100%;
-    height: 8rem;
+    height: 7rem;
     background-color: #ffffff;
     z-index: 1;
     text-align: center;
@@ -171,8 +171,9 @@ footer a{
     vertical-align: middle;
 }
 .home{
-    background: url("../img/allbgs.png") no-repeat;
-    background-position:0 -88px;
+    background: url("../img/shouye.png") no-repeat;
+    /*background-position:0 -88px;*/
+    background-size: 3.5rem 3.5rem;
     position: absolute;
     top: 50%;
     left: 2rem;
@@ -184,17 +185,19 @@ footer a{
     font-size: 1.5rem;
 }
 .xie{
-    background: url("../img/allbgs.png") no-repeat;
-    background-position:0 -213px;
+    background: url("../img/xie.png") no-repeat;
+    /*background-position:0 -213px;*/
+    background-size: 6.5rem 6.5rem;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    width: 8rem;
-    height:8rem;
+    width: 7rem;
+    height:7rem;
 }
 .mine{
-    background: url("../img/allbgs.png") no-repeat;
-    background-position:0 -128px;
+    background: url("../img/toux.png") no-repeat;
+    /*background-position:0 -128px;*/
+    background-size: 3.5rem 3.5rem;
     position: absolute;
     top: 50%;
     right: 2rem;
@@ -207,6 +210,6 @@ footer a{
 }
 @media screen and (max-width: 300px) {
     main p {
-        margin-right:8rem ;
+        padding-right:8rem ;
     }
 }
